package Carta.Desarrollo;

public class Descubrimiento extends Desarrollo{
}
