package Carta.Recurso;

import Carta.Carta;

public class Recurso extends Carta {
}
