package Tablero;

public class Carretera {
}
