@startuml Diagrama De CLASES

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ======================
' CLASES DEL MODELO
' ======================

class java.Ladron
class java.Catan
class java.Tablero
class java.Jugador
class Banco
class Dado
class Hexagono
class java.Terreno
class Desierto
interface Productor
class Numero
class Vertice
class Camino
interface Produccion
class Carretera
class Poblado
interface Bonificacion
class Ciudad
interface Construccion
class java.Recurso
interface Desarrollo
class Caballero
class PuntoDeVictoria
interface Progreso
class Monopolio
class ConstruccionDeCarreteras
class Descubrimiento


java.Catan --> java.Ladron
java.Catan --> java.Tablero
java.Catan --> "3..4" java.Jugador
java.Catan --> Dado
java.Catan --> Banco

java.Tablero *-- "19" Hexagono

Hexagono --> java.Terreno
Hexagono --> Numero

java.Terreno <|-- Productor
java.Terreno <|-- Desierto

java.Ladron --> Hexagono

Construccion <|.. Produccion
Construccion <|.. Carretera

Produccion <|.. Poblado
Produccion <|.. Ciudad

Hexagono <--> Vertice

java.Jugador --> java.Recurso
java.Jugador --> Desarrollo
java.Jugador --> Construccion
java.Jugador --> Bonificacion

Bonificacion <|-- Ejercito
Bonificacion <|-- Ruta

Desarrollo <|-- Caballero
Desarrollo <|-- PuntoDeVictoria
Desarrollo <|-- Progreso
Progreso <|-- Monopolio
Progreso <|-- ConstruccionDeCarreteras
Progreso <|-- Descubrimiento

Vertice --> Produccion
Vertice <--> Camino

Camino --> Carretera

Banco --> Desarrollo
Banco --> java.Recurso

Productor <|.. Madera
Productor <|.. Ladrillo
Productor <|.. Lana
Productor <|.. Grano
Productor <|.. Mineral

@enduml